# vedioquant

./: .gitignore  LICENSE  README.md  VedioQuant_Research_Report_CN.docx  VedioQuant_Research_Report_EN.docx  benchmark_real.py  benchmark_wan22.py  pyproject.toml
hf_model/: README.md  pipeline_vedioquant.py
research/: comparison.py  phase2_extract_features.py  phase2_lite.py  phase3_fusion.py  phase3_fusion_v2.py  step1_polarquant.py  step2_qjl.py  video_kvcache_research_brief.md
scripts/: generate_article.py  generate_article_v2.py  generate_article_v3.py  generate_figures.py
tests/: test_compressor.py  test_e2e_wan.py
vedioquant/: __init__.py  config.py
vedioquant/compressor/: __init__.py  codebook.py  polar_quant.py  turbo_quant.py
vedioquant/diagnostics/: __init__.py  memory.py  quality.py
vedioquant/hooks/: __init__.py  block_detector.py  compressed_cache.py
