[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedioquant"
version = "0.1.0"
description = "视频扩散模型推理缓存压缩加速库 - TurboQuant × TeaCache 融合"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
diagnostics = [
    "scipy>=1.10",
]
dev = [
    "pytest>=7.0",
    "scipy>=1.10",
    "diffusers>=0.30",
    "transformers>=4.30",
]

[tool.setuptools.packages.find]
include = ["vedioquant*"]
